src/test/ui/parser/mistyped_reserved_token.stderr
error: `"While"` is not a keyword
  --> $DIR/mistyped_reserved_token.rs:2:13
   |
LL |     let a = While true {
   |             ^^^^^ try `"while"` instead

error: aborting due to previous error

